[package]
name = "vramblk"
version = "0.1.0"
edition = "2024"
authors = ["Jasmin Le Roux <theblazehen@gmail.com>"]
description = "A block device that exposes GPU memory to userspace via a NBD server."
license = "MIT"
readme = "README.md"
repository = "https://github.com/theblazehen/vramblk"
keywords = ["nbd", "opencl", "gpu", "block-device", "swap"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "vramblk"
path = "src/main.rs"

[dependencies]
opencl3 = "0.9"
nix = "0.26"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
signal-hook = "0.3"
nbd = "0.3.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
